---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE FUNCTION concat_lower_or_upper(a text, b text, uppercase boolean DEFAULT false)\nRETURNS text\nAS\n$$\n SELECT CASE\n        WHEN $3 THEN UPPER($1 || ' ' || $2)\n        ELSE LOWER($1 || ' ' || $2)\n        END;\n$$\nLANGUAGE SQL IMMUTABLE STRICT;"
---
Parse {
    cst: SourceFile@0..245
      CreateFunctionStmt@0..245
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Function@7..15 "FUNCTION"
        Whitespace@15..16 " "
        Ident@16..37 "concat_lower_or_upper"
        Ascii40@37..38 "("
        FunctionParameter@38..44
          Ident@38..39 "a"
          Whitespace@39..40 " "
          TypeName@40..44
            TextP@40..44 "text"
        Ascii44@44..45 ","
        Whitespace@45..46 " "
        FunctionParameter@46..52
          Ident@46..47 "b"
          Whitespace@47..48 " "
          TypeName@48..52
            TextP@48..52 "text"
        Ascii44@52..53 ","
        Whitespace@53..54 " "
        FunctionParameter@54..85
          Ident@54..63 "uppercase"
          Whitespace@63..64 " "
          TypeName@64..71
            BooleanP@64..71 "boolean"
          Whitespace@71..72 " "
          Default@72..79 "DEFAULT"
          Whitespace@79..80 " "
          AConst@80..85
            FalseP@80..85 "false"
        Ascii41@85..86 ")"
        Newline@86..87 "\n"
        Returns@87..94 "RETURNS"
        Whitespace@94..95 " "
        TypeName@95..99
          TextP@95..99 "text"
        Newline@99..100 "\n"
        DefElem@100..214
          As@100..102 "AS"
          Newline@102..103 "\n"
          List@103..214
            Sconst@103..214 "$$\n SELECT CASE\n      ..."
        Newline@214..215 "\n"
        DefElem@215..227
          Language@215..223 "LANGUAGE"
          Whitespace@223..224 " "
          SqlP@224..227 "SQL"
        Whitespace@227..228 " "
        DefElem@228..237
          Immutable@228..237 "IMMUTABLE"
        Whitespace@237..238 " "
        DefElem@238..244
          StrictP@238..244 "STRICT"
        Ascii59@244..245 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateFunctionStmt(
                CreateFunctionStmt {
                    is_procedure: false,
                    replace: false,
                    funcname: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "concat_lower_or_upper",
                                    },
                                ),
                            ),
                        },
                    ],
                    parameters: [
                        Node {
                            node: Some(
                                FunctionParameter(
                                    FunctionParameter {
                                        name: "a",
                                        arg_type: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "text",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 40,
                                            },
                                        ),
                                        mode: FuncParamDefault,
                                        defexpr: None,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                FunctionParameter(
                                    FunctionParameter {
                                        name: "b",
                                        arg_type: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "text",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 48,
                                            },
                                        ),
                                        mode: FuncParamDefault,
                                        defexpr: None,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                FunctionParameter(
                                    FunctionParameter {
                                        name: "uppercase",
                                        arg_type: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "pg_catalog",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "bool",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 64,
                                            },
                                        ),
                                        mode: FuncParamDefault,
                                        defexpr: Some(
                                            Node {
                                                node: Some(
                                                    AConst(
                                                        AConst {
                                                            isnull: false,
                                                            location: 80,
                                                            val: Some(
                                                                Boolval(
                                                                    Boolean {
                                                                        boolval: false,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                    return_type: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "text",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 95,
                        },
                    ),
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "as",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    List(
                                                        List {
                                                            items: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "\n SELECT CASE\n        WHEN $3 THEN UPPER($1 || ' ' || $2)\n        ELSE LOWER($1 || ' ' || $2)\n        END;\n",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 100,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "language",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "sql",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 215,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "volatility",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "immutable",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 228,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "strict",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    Boolean(
                                                        Boolean {
                                                            boolval: true,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 238,
                                    },
                                ),
                            ),
                        },
                    ],
                    sql_body: None,
                },
            ),
            range: 0..244,
        },
    ],
}
